# SharedMemoryIPC

./: README.md
Client/: CMakeLists.txt  IPCClient.c
Server/: CMakeLists.txt  IPCServer.c
